# sweeper

./: .gitignore  Cargo.toml  README.md  flake.nix
docs/: sweep.typ
examples/: boolean_op.rs  svg.rs  sweep-event-svg.rs  winding-numbers.rs
gui/: Cargo.toml
gui/src/: main.rs  view.rs  widget.rs
src/: equivalence.rs  exact.rs  geom.rs  interval.rs  lib.rs  num.rs  perturbation.rs  segments.rs  subrange.rs  sweep.rs  topology.rs  types.rs  weak_ordering.rs
src/algorithms/: strip.rs
src/snapshots/: linesweeper__tests__two_squares.snap  linesweeper__topology__tests__inner_loop.snap  linesweeper__topology__tests__nested_squares.snap  linesweeper__topology__tests__square.snap  linesweeper__weak_ordering__tests__square.snap
src/sweep/: mod.rs  weak_ordering.rs
src/sweep/snapshots/: linesweeper__sweep__weak_ordering__tests__regression_position_state.snap  linesweeper__sweep__weak_ordering__tests__square.snap
sweeps/: Cargo.toml
sweeps/examples/: boolean_op.rs  sweep-event-svg.rs  sweep-svg.rs  winding-numbers.rs
sweeps/src/: geom.rs  lib.rs  num.rs  perturbation.rs  segments.rs  subrange.rs  sweep.rs  topology.rs  weak_ordering.rs
sweeps/src/algorithms/: mod.rs  strip.rs  weak.rs
sweeps/src/snapshots/: linesweeper__topology__tests__diamond.snap  linesweeper__topology__tests__inner_loop.snap  linesweeper__topology__tests__square_and_diamond.snap  sweeps__topology__tests__diamond.snap  sweeps__topology__tests__inner_loop.snap  sweeps__topology__tests__nested_squares.snap  sweeps__topology__tests__square.snap  sweeps__topology__tests__square_and_diamond.snap  sweeps__topology__tests__square_with_double_back.snap
tests/: main.rs
