[package]
name = "sweeps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malachite = "0.4.5"
ordered-float = "4.2.0"
robust = "1.1.0"

[dev-dependencies]
anyhow = "1.0.80"
arbitrary = { version = "1.3.2", features = ["derive"] }
arbtest = "0.3.1"
clap = { version = "4.5.1", features = ["derive"] }
svg = { version = "0.15.1", default-features = false }
usvg = { version = "0.40.0", default-features = false }
