[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ordered-float = "4.2.0"
sweeps = { version = "0.1.0", path = "../sweeps" }
taffy = "0.4.3"
xilem = { git = "https://github.com/linebender/xilem", version = "0.1.0", features = ["taffy", "wayland"] }
#xilem = { path = "../../xilem", version = "0.1.0", features = ["taffy", "wayland"] }

