[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ordered-float = "4.2.0"
sweeps = { version = "0.1.0", path = "../sweeps" }
taffy = "0.4.3"
masonry = { git = "https://github.com/linebender/xilem", version = "0.2.0" }
xilem = { git = "https://github.com/linebender/xilem", version = "0.1.0" }
xilem_core = { git = "https://github.com/linebender/xilem", version = "0.1.0" }
smallvec = "1.13.2"
accesskit = "0.15.0"
#xilem = { path = "../../xilem", version = "0.1.0", features = ["taffy", "wayland"] }

